V2911: finish Flex synoptics

--- a/Prevu.Synoptics.V2911_Flex/D020.xaml
+++ b/Prevu.Synoptics.V2911_Flex/D020.xaml
@@ -10,8 +10,18 @@
              mc:Ignorable="d" 
              Height="486" Width="625" d:Background="{DynamicResource MaterialDesignPaper}">
   <Canvas  Height="486" Width="625">
-    <Labels:Pipe Width="401" StatusComponent="020-22-CV1" RenderTransformOrigin="0.5,0.5" Color="Oil" Height="6" Canvas.Left="134" Canvas.Top="208" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Labels:Pipe Width="34" StatusComponent="020-22-CV1" RenderTransformOrigin="0.5,0.5" Color="Oil" Height="6" Canvas.Left="315" Canvas.Top="192" HorizontalAlignment="Left" VerticalAlignment="Center">
+    <Labels:Pipe Width="25" StatusComponent="020-01-MA1" RenderTransformOrigin="0.5,0.5" Color="Oil" Height="5" Canvas.Left="40" Canvas.Top="338" HorizontalAlignment="Left" VerticalAlignment="Center">
+      <Labels:Pipe.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform/>
+          <SkewTransform/>
+          <RotateTransform Angle="-0.169"/>
+          <TranslateTransform/>
+        </TransformGroup>
+      </Labels:Pipe.RenderTransform>
+    </Labels:Pipe>
+    <Labels:Pipe Width="401" StatusComponent="020-01-MA1" RenderTransformOrigin="0.5,0.5" Color="Oil" Height="6" Canvas.Left="134" Canvas.Top="208" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:Pipe Width="34" StatusComponent="020-01-MA1" RenderTransformOrigin="0.5,0.5" Color="Oil" Height="6" Canvas.Left="315" Canvas.Top="192" HorizontalAlignment="Left" VerticalAlignment="Center">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -21,7 +31,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="34" StatusComponent="020-22-CV1" RenderTransformOrigin="0.5,0.5" Color="Oil" Height="6" Canvas.Left="516" Canvas.Top="193" HorizontalAlignment="Left" VerticalAlignment="Center">
+    <Labels:Pipe Width="34" StatusComponent="020-01-MA1" RenderTransformOrigin="0.5,0.5" Color="Oil" Height="6" Canvas.Left="516" Canvas.Top="193" HorizontalAlignment="Left" VerticalAlignment="Center">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -31,7 +41,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="166" StatusComponent="020-22-CV1" RenderTransformOrigin="0.5,0.5" Color="Oil" Height="6" Canvas.Left="53" Canvas.Top="256" HorizontalAlignment="Center" VerticalAlignment="Top">
+    <Labels:Pipe Width="166" StatusComponent="020-01-MA1" RenderTransformOrigin="0.5,0.5" Color="Oil" Height="6" Canvas.Left="53" Canvas.Top="256" HorizontalAlignment="Center" VerticalAlignment="Top">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -51,7 +61,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="130" StatusComponent="020-22-CV1" RenderTransformOrigin="0.5,0.5" Color="Oil" Height="5" Canvas.Left="40" Canvas.Top="338">
+    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="80" StatusComponent="020-01-MA1" RenderTransformOrigin="0.5,0.5" Color="Oil" Height="5" Canvas.Left="90" Canvas.Top="338">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -61,7 +71,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="141" StatusComponent="020-22-CV1" RenderTransformOrigin="0.5,0.5" Color="Oil" Height="5" Canvas.Left="251" Canvas.Top="308">
+    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="141" StatusComponent="020-02-MA2" RenderTransformOrigin="0.5,0.5" Color="Oil" Height="5" Canvas.Left="251" Canvas.Top="308">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -71,7 +81,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="84" StatusComponent="020-22-CV1" RenderTransformOrigin="0.5,0.5" Color="Oil" Height="5" Canvas.Left="349" Canvas.Top="348">
+    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="84" StatusComponent="020-02-MA2" RenderTransformOrigin="0.5,0.5" Color="Oil" Height="5" Canvas.Left="349" Canvas.Top="348">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -81,7 +91,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="78" StatusComponent="020-22-CV1" RenderTransformOrigin="0.5,0.5" Color="Oil" Height="6" Canvas.Left="214" Canvas.Top="344">
+    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="78" StatusComponent="020-02-MA2" RenderTransformOrigin="0.5,0.5" Color="Oil" Height="6" Canvas.Left="214" Canvas.Top="344">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -91,7 +101,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="30" StatusComponent="020-22-CV1" RenderTransformOrigin="0.5,0.5" Color="Oil" Height="5" Canvas.Left="210" Canvas.Top="338">
+    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="30" StatusComponent="020-01-MA1" RenderTransformOrigin="0.5,0.5" Color="Oil" Height="5" Canvas.Left="210" Canvas.Top="338">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -101,7 +111,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="49" StatusComponent="020-22-CV1" RenderTransformOrigin="0.5,0.5" Color="Oil" Height="5" Canvas.Left="213" Canvas.Top="360">
+    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="49" StatusComponent="020-01-MA1" RenderTransformOrigin="0.5,0.5" Color="Oil" Height="5" Canvas.Left="213" Canvas.Top="360">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
