--- a/Prevu.Synoptics.V2911_Flex/P020.xaml
+++ b/Prevu.Synoptics.V2911_Flex/P020.xaml
@@ -32,7 +32,7 @@
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
     <Labels:Pipe Width="68" StatusComponent="030-01-MA1" PipeHeight="Medium" Canvas.Left="797" Canvas.Top="294" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="60" StatusComponent="020-22-CV1" PipeHeight="Medium" Canvas.Left="380" Canvas.Top="502"/>
+    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="60" StatusComponent="020-DEBALER" PipeHeight="Medium" Canvas.Left="380" Canvas.Top="502"/>
     <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="218" StatusComponent="018-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" Canvas.Left="193" Canvas.Top="365">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
@@ -64,7 +64,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="54" StatusComponent="031-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="744" Canvas.Top="379" HorizontalAlignment="Left" VerticalAlignment="Center">
+    <Labels:Pipe Width="54" StatusComponent="030-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="744" Canvas.Top="379" HorizontalAlignment="Left" VerticalAlignment="Center">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -74,7 +74,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="54" StatusComponent="031-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="652" Canvas.Top="379" HorizontalAlignment="Left" VerticalAlignment="Center">
+    <Labels:Pipe Width="54" StatusComponent="030-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="652" Canvas.Top="379" HorizontalAlignment="Left" VerticalAlignment="Center">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -94,8 +94,8 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="64" StatusComponent="020-22-CV1" PipeHeight="Medium" Canvas.Left="431" Canvas.Top="181" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Labels:Pipe Width="330" Canvas.Top="341" StatusComponent="020-22-CV1" PipeHeight="Medium" Canvas.Left="271" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" >
+    <Labels:Pipe Width="64" StatusComponent="020-DEBALER" PipeHeight="Medium" Canvas.Left="431" Canvas.Top="181" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:Pipe Width="330" Canvas.Top="341" StatusComponent="020-DEBALER" PipeHeight="Medium" Canvas.Left="271" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" >
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -188,7 +188,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="154" StatusComponent="096-01-MA1" PipeHeight="Medium" Canvas.Left="1286" Canvas.Top="462" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
+    <Labels:Pipe Width="154" StatusComponent="180-01-MA1" PipeHeight="Medium" Canvas.Left="1286" Canvas.Top="462" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -198,7 +198,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="68" StatusComponent="096-01-MA1" PipeHeight="Medium" Canvas.Left="1300" Canvas.Top="390" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+    <Labels:Pipe Width="68" StatusComponent="180-01-MA1" PipeHeight="Medium" Canvas.Left="1300" Canvas.Top="390" HorizontalAlignment="Left" VerticalAlignment="Top"/>
     <Machines:CV_Valve HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Height="48" Width="56" Canvas.Left="191" Canvas.Top="131">
       <Machines:CV_Valve.RenderTransform>
         <TransformGroup>
