--- a/Prevu.Synoptics.V2911_Flex/P288.xaml
+++ b/Prevu.Synoptics.V2911_Flex/P288.xaml
@@ -10,8 +10,18 @@
              x:Class="Prevu.Synoptics.P288" mc:Ignorable="d" 
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
   <Canvas>
-    <Labels:Pipe Width="70" StatusComponent="229-21-CV1" Color="Water" Canvas.Left="167" Canvas.Top="88" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Labels:Pipe RenderTransformOrigin="0.5,0.5" Width="64" StatusComponent="229-21-CV1" Color="Water" Canvas.Left="203" Canvas.Top="119" HorizontalAlignment="Left" VerticalAlignment="Center">
+    <Labels:Pipe RenderTransformOrigin="0.5,0.5" Width="164" StatusComponent="477-01-MA1" Color="Water" Canvas.Left="425" Canvas.Top="245" HorizontalAlignment="Left" VerticalAlignment="Center">
+      <Labels:Pipe.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform/>
+          <SkewTransform/>
+          <RotateTransform Angle="90"/>
+          <TranslateTransform/>
+        </TransformGroup>
+      </Labels:Pipe.RenderTransform>
+    </Labels:Pipe>
+    <Labels:Pipe Width="70" StatusComponent="232-01-MA1" Color="Water" Canvas.Left="167" Canvas.Top="88" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:Pipe RenderTransformOrigin="0.5,0.5" Width="64" StatusComponent="232-01-MA1" Color="Water" Canvas.Left="203" Canvas.Top="119" HorizontalAlignment="Left" VerticalAlignment="Center">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -22,7 +32,7 @@
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
     <Labels:Pipe Width="196" StatusComponent="236-01-MA1" Color="Water" Canvas.Left="275" Canvas.Top="168" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="111" StatusComponent="288-21-CV1" Canvas.Left="1043" Canvas.Top="289"/>
+    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="172" StatusComponent="288-21-CV1" Canvas.Left="1043" Canvas.Top="289"/>
     <Labels:Pipe Color="Water" Width="135" StatusComponent="288-21-CV1" RenderTransformOrigin="0.5,0.5" Canvas.Left="977" Canvas.Top="354" HorizontalAlignment="Left" VerticalAlignment="Center">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
@@ -53,9 +63,9 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="219" StatusComponent="285-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="544" Canvas.Top="754"/>
-    <Labels:Pipe Color="Water" Width="176" StatusComponent="285-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="759" Canvas.Top="553" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Labels:Pipe Color="Water" Width="205" StatusComponent="285-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="659" Canvas.Top="654" HorizontalAlignment="Left" VerticalAlignment="Center">
+    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Center" Color="Water" Width="244" StatusComponent="286-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="519" Canvas.Top="754"/>
+    <Labels:Pipe Color="Water" Width="176" StatusComponent="286-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="759" Canvas.Top="553" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:Pipe Color="Water" Width="205" StatusComponent="286-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="659" Canvas.Top="654" HorizontalAlignment="Left" VerticalAlignment="Center">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -65,8 +75,8 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Color="Water" Width="247" StatusComponent="292-01-MA1" Canvas.Left="1102" Canvas.Top="524" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Labels:Pipe Color="Water" Width="304" StatusComponent="291-01-MA1" Canvas.Left="1095" Canvas.Top="449" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:Pipe Color="Water" Width="288" StatusComponent="292-01-MA1" Canvas.Left="1102" Canvas.Top="524" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+    <Labels:Pipe Color="Water" Width="304" StatusComponent="291-01-MA1" Canvas.Left="1095" Canvas.Top="449" HorizontalAlignment="Center" VerticalAlignment="Center"/>
     <Labels:Pipe RenderTransformOrigin="0.5,0.5" Width="182" StatusComponent="236-01-MA1" Color="Water" Canvas.Left="378" Canvas.Top="257" HorizontalAlignment="Left" VerticalAlignment="Center">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
@@ -77,8 +87,8 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="323" StatusComponent="293-01-MA1" Canvas.Left="1022" Canvas.Top="675"/>
-    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="174" RenderTransformOrigin="0.5,0.5" StatusComponent="286-01-MA1" Canvas.Left="434" Canvas.Top="681">
+    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Center" Color="Water" Width="373" StatusComponent="293-01-MA1" Canvas.Left="1022" Canvas.Top="675"/>
+    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="162" RenderTransformOrigin="0.5,0.5" StatusComponent="286-01-MA1" Canvas.Left="440" Canvas.Top="675">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -150,7 +160,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Machines:CV_Valve_001 HorizontalAlignment="Left" VerticalAlignment="Center" Height="100" Width="100" Color="Water" RenderTransformOrigin="0.5,0.5" Canvas.Left="1118" Canvas.Top="242">
+    <Machines:CV_Valve_001 HorizontalAlignment="Left" VerticalAlignment="Center" Height="100" Width="100" Color="Water" RenderTransformOrigin="0.5,0.5" Canvas.Left="1184" Canvas.Top="242">
       <Machines:CV_Valve_001.RenderTransform>
         <TransformGroup>
           <ScaleTransform ScaleX="-0.5" ScaleY="0.5"/>
@@ -180,7 +190,7 @@
         </TransformGroup>
       </Machines:CV_Valve_001.RenderTransform>
     </Machines:CV_Valve_001>
-    <Machines:WaterPump HorizontalAlignment="Left" VerticalAlignment="Center" Height="44" Width="46" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="1191" Canvas.Top="656">
+    <Machines:WaterPump HorizontalAlignment="Left" VerticalAlignment="Center" Height="44" Width="46" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="1211" Canvas.Top="656">
       <Machines:WaterPump.RenderTransform>
         <TransformGroup>
           <ScaleTransform ScaleX="-1"/>
@@ -196,22 +206,20 @@
                       VerticalAlignment="Center" 
                       JumpFromLabel="283-01-MA1" 
                       JumpToLabel="457-01-MA1" Canvas.Left="541" Canvas.Top="55" Direction="Left"/>
-    <Labels:JumpLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            JumpFromLabel="282-04-MA1" 
-            JumpToLabel="110-41-LT1" Canvas.Left="1333" Canvas.Top="641"/>
+    <Labels:JumpLabel HorizontalAlignment="Center" 
+            VerticalAlignment="Top" 
+            JumpFromLabel="293-01-MA1" 
+            JumpToLabel="100-01-MA1" Canvas.Left="1384" Canvas.Top="642"/>
     <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
             ComponentName="283-01-MA1" Canvas.Left="257" Canvas.Top="265"/>
     <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
-            ComponentName="288-21-CV1" Canvas.Left="1120" Canvas.Top="219"/>
+            ComponentName="288-21-CV1" Canvas.Left="1189" Canvas.Top="219"/>
     <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
-            ComponentName="293-01-MA1" Canvas.Left="1169" Canvas.Top="706"/>
-    <Labels:DeviceLabel 
-            ComponentName="285-01-MA1" Canvas.Left="356" Canvas.Top="729" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Machines:WaterPump Height="46" Width="46" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="1211" Canvas.Top="504" HorizontalAlignment="Left" VerticalAlignment="Center">
+            ComponentName="293-01-MA1" Canvas.Left="1189" Canvas.Top="706"/>
+    <Machines:WaterPump Height="46" Width="46" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="1211" Canvas.Top="504" HorizontalAlignment="Center" VerticalAlignment="Center">
       <Machines:WaterPump.RenderTransform>
         <TransformGroup>
           <ScaleTransform ScaleX="-1"/>
@@ -223,10 +231,10 @@
     </Machines:WaterPump>
     <Labels:JumpLabel 
             JumpFromLabel="292-01-MA1" 
-            JumpToLabel="232-01-MA1" Canvas.Left="1334" Canvas.Top="490" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+            JumpToLabel="232-01-MA1" Canvas.Left="1384" Canvas.Top="492" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel 
-            ComponentName="292-01-MA1" Canvas.Left="1189" Canvas.Top="555" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Machines:WaterPump Height="44" Width="46" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="1211" Canvas.Top="430" HorizontalAlignment="Left" VerticalAlignment="Center">
+            ComponentName="292-01-MA1" Canvas.Left="1189" Canvas.Top="555" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+    <Machines:WaterPump Height="44" Width="46" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="1211" Canvas.Top="430" HorizontalAlignment="Center" VerticalAlignment="Center">
       <Machines:WaterPump.RenderTransform>
         <TransformGroup>
           <ScaleTransform ScaleX="-1"/>
@@ -238,9 +246,9 @@
     </Machines:WaterPump>
     <Labels:JumpLabel 
             JumpFromLabel="291-01-MA1" 
-            JumpToLabel="229-01-MA1" Canvas.Left="1384" Canvas.Top="415" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+            JumpToLabel="230-01-MA1" Canvas.Left="1384" Canvas.Top="416" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel 
-            ComponentName="291-01-MA1" Canvas.Left="1189" Canvas.Top="373" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+            ComponentName="291-01-MA1" Canvas.Left="1189" Canvas.Top="373" HorizontalAlignment="Center" VerticalAlignment="Center"/>
     <Rectangle Height="2" Stroke="Black" Width="90" RenderTransformOrigin="0.5,0.5" Canvas.Left="942" Canvas.Top="240" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Machines:External Height="58" Width="60" RenderTransformOrigin="0.5,0.5" Canvas.Left="1010" Canvas.Top="212" HorizontalAlignment="Left" VerticalAlignment="Center">
       <Machines:External.RenderTransform>
@@ -334,16 +342,9 @@
     <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
             ComponentName="288-41-LT1" Canvas.Left="966" Canvas.Top="498"/>
-    <Machines:VRC_WaterCollectingTank Height="78" Width="94" Canvas.Left="474" Canvas.Top="718" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Machines:WaterPump Height="44" Width="46" RenderTransformOrigin="0.5,0.5" Color="Water" BorderBrush="Black" Canvas.Left="498" Canvas.Top="735" HorizontalAlignment="Left" VerticalAlignment="Center">
-      <Machines:WaterPump.RenderTransform>
-        <TransformGroup>
-          <ScaleTransform ScaleX="1"/>
-          <SkewTransform/>
-          <RotateTransform Angle="0"/>
-          <TranslateTransform/>
-        </TransformGroup>
-      </Machines:WaterPump.RenderTransform>
-    </Machines:WaterPump>
+    <Labels:Pipe Width="69" StatusComponent="477-01-MA1" Color="Water" Canvas.Left="505" Canvas.Top="165" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:JumpLabel 
+      JumpFromLabel="283-01-MA1" 
+      JumpToLabel="477-01-MA1" Canvas.Left="561" Canvas.Top="132" Direction="Left" HorizontalAlignment="Left" VerticalAlignment="Center"/>
   </Canvas>
 </UserControl>
