--- a/Prevu.Synoptics.V2911_Flex/P350.xaml
+++ b/Prevu.Synoptics.V2911_Flex/P350.xaml
@@ -10,7 +10,7 @@
              x:Class="Prevu.Synoptics.P350" mc:Ignorable="d" 
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
   <Canvas>
-    <Labels:Pipe Color="Oil" Width="76" RenderTransformOrigin="0.5,0.5" StatusComponent="377-01-MA1" VisibilityComponent="377-21-CV1" Canvas.Left="1258" Canvas.Top="338" HorizontalAlignment="Left" VerticalAlignment="Center">
+    <Labels:Pipe Color="Oil" Width="76" RenderTransformOrigin="0.5,0.5" StatusComponent="380-21-CV1" VisibilityComponent="377-21-CV1" Canvas.Left="1258" Canvas.Top="338" HorizontalAlignment="Left" VerticalAlignment="Center">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -20,7 +20,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="75" StatusComponent="376-01-MA1" PipeHeight="Medium" Canvas.Left="825" Canvas.Top="277" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center">
+    <Labels:Pipe Width="75" StatusComponent="350-01-MA1" PipeHeight="Medium" Canvas.Left="825" Canvas.Top="277" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -127,7 +127,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="182" StatusComponent="370-21-CV1" Canvas.Left="468" Canvas.Top="631"/>
+    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="155" StatusComponent="370-21-CV1" Canvas.Left="495" Canvas.Top="631"/>
     <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="429" Color="Water" StatusComponent="373-01-MA1" Canvas.Left="252" Canvas.Top="761"/>
     <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="248" Color="Water" StatusComponent="373-01-MA1" Canvas.Left="256" Canvas.Top="518">
       <Labels:Pipe.RenderTransform>
@@ -243,7 +243,7 @@
     </Labels:Pipe>
     <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="189" StatusComponent="373-01-MA1" Canvas.Left="141" Canvas.Top="517"/>
     <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="170" Color="Water" StatusComponent="377-01-MA1" VisibilityComponent="377-23-CV1" Canvas.Left="1238" Canvas.Top="526"/>
-    <Labels:Pipe Width="127" StatusComponent="376-01-MA1" PipeHeight="Medium" Canvas.Left="1288" Canvas.Top="171" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:Pipe Width="127" StatusComponent="380-01-MA1" PipeHeight="Medium" Canvas.Left="1288" Canvas.Top="171" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Rectangle HorizontalAlignment="Left" Height="0" Stroke="Black" VerticalAlignment="Center" Width="50" Canvas.Left="915" Canvas.Top="525"/>
     <Rectangle HorizontalAlignment="Left" Height="35" Stroke="Black" VerticalAlignment="Center" Width="2" Canvas.Left="588" Canvas.Top="601"/>
     <Rectangle HorizontalAlignment="Left" Height="36" Stroke="Black" VerticalAlignment="Center" Width="2" RenderTransformOrigin="0.5,0.5" Canvas.Left="347" Canvas.Top="730">
@@ -415,7 +415,7 @@
     <Labels:JumpLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
             JumpFromLabel="380-01-MA1" 
-            JumpToLabel="430-01-MA1" Canvas.Left="1400" Canvas.Top="140"/>
+            JumpToLabel="420-01-MA1" Canvas.Left="1400" Canvas.Top="140"/>
     <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
             ComponentName="376-01-MA1" Loaded="DeviceLabel_Loaded" Canvas.Left="866" Canvas.Top="185" Width="89"/>
@@ -427,11 +427,11 @@
             JumpFromLabel="354-HEAT" 
             JumpToLabel="330-WASHING" Direction="Left" Canvas.Left="96" Canvas.Top="485" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:DeviceLabel 
-            ComponentName="377-71-ECS2" Canvas.Left="1304" Canvas.Top="552" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+            ComponentName="377-71-ECS1" Canvas.Left="1304" Canvas.Top="552" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
             ComponentName="376-61-LEV" Loaded="DeviceLabel_Loaded" Canvas.Left="686" Canvas.Top="282"/>
-    <Labels:DetailsLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="376-VIEW" DetailsPageName="D376" HideComponentName="True" Canvas.Left="786" Canvas.Top="282"/>
+    <Labels:DetailsLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="376-HOPPER" DetailsPageName="D376" HideComponentName="True" Canvas.Left="786" Canvas.Top="282"/>
     <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Center" 
             ComponentName="352-01-MA1" Canvas.Left="866" Canvas.Top="564"/>
