--- a/Prevu.Synoptics.V2911_Flex/P140.xaml
+++ b/Prevu.Synoptics.V2911_Flex/P140.xaml
@@ -239,7 +239,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="120" StatusComponent="170-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1264" Canvas.Top="442" HorizontalAlignment="Left" VerticalAlignment="Center">
+    <Labels:Pipe Width="120" StatusComponent="170-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1264" Canvas.Top="442" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="170-21-CV1" VisibilitySignal="LS1">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -269,7 +269,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="126" StatusComponent="170-01-MA1" PipeHeight="Medium" Canvas.Left="1300" Canvas.Top="440" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center">
+    <Labels:Pipe Width="126" StatusComponent="170-01-MA1" PipeHeight="Medium" Canvas.Left="1300" Canvas.Top="440" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="170-21-CV1" VisibilitySignal="LS2">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -279,7 +279,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="93" StatusComponent="170-01-MA1" PipeHeight="Medium" Canvas.Left="1358" Canvas.Top="500" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:Pipe Width="93" StatusComponent="170-01-MA1" PipeHeight="Medium" Canvas.Left="1358" Canvas.Top="500" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="170-21-CV1" VisibilitySignal="LS2"/>
     <Labels:Pipe Width="38" StatusComponent="173-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="764" Canvas.Top="413" HorizontalAlignment="Left" VerticalAlignment="Center">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
@@ -358,7 +358,7 @@
     <Labels:JumpLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
             JumpFromLabel="180-01-MA1" 
-            JumpToLabel="197-01-MA1" Canvas.Left="601" Canvas.Top="733" Direction="Left"/>
+            JumpToLabel="098-01-MA1" Canvas.Left="601" Canvas.Top="733" Direction="Left"/>
     <Labels:JumpLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
             JumpFromLabel="170-01-MA1" 
