--- a/Prevu.Synoptics.V2911_Flex/P230.xaml
+++ b/Prevu.Synoptics.V2911_Flex/P230.xaml
@@ -11,6 +11,7 @@
              x:Class="Prevu.Synoptics.P230" mc:Ignorable="d" 
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
   <Canvas>
+    <Labels:Pipe Color="Water" Width="242" StatusComponent="291-01-MA1" Canvas.Left="155" Canvas.Top="363" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:Pipe Color="Water" Width="138" StatusComponent="292-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="168" Canvas.Top="536" HorizontalAlignment="Center" VerticalAlignment="Top">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
@@ -44,8 +45,8 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="51" StatusComponent="227-01-MA1" PipeHeight="Medium" Canvas.Left="355" Canvas.Top="85"/>
-    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="176" PipeHeight="Medium" StatusComponent="227-01-MA1" Canvas.Left="313" Canvas.Top="169">
+    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="51" StatusComponent="228-01-MA1" PipeHeight="Medium" Canvas.Left="355" Canvas.Top="85"/>
+    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="176" PipeHeight="Medium" StatusComponent="228-01-MA1" Canvas.Left="313" Canvas.Top="169">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -55,7 +56,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Top" Width="130" StatusComponent="208-01-MA1" PipeHeight="Medium" Canvas.Left="143" Canvas.Top="85"/>
+    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Top" Width="130" StatusComponent="170-01-MA1" PipeHeight="Medium" Canvas.Left="143" Canvas.Top="85"/>
     <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" Width="72" StatusComponent="232-01-MA1" PipeHeight="Medium" Canvas.Left="487" Canvas.Top="587">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
@@ -76,7 +77,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="200" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="229-21-CV1" Canvas.Left="328" Canvas.Top="582">
+    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="120" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="232-01-MA1" Canvas.Left="368" Canvas.Top="622">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -90,7 +91,7 @@
     <Machines:NT_ConveyorBelt HorizontalAlignment="Center" VerticalAlignment="Center" Width="152" Canvas.Left="220" Canvas.Top="80" />
     <Labels:DeviceLabel HorizontalAlignment="Left" 
                         VerticalAlignment="Center" 
-                        ComponentName="227-01-MA1" Canvas.Left="251" Canvas.Top="107"/>
+                        ComponentName="228-01-MA1" Canvas.Left="251" Canvas.Top="107"/>
     <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
             ComponentName="234-01-MA1" Canvas.Left="654" Canvas.Top="666"/>
@@ -105,8 +106,8 @@
       ComponentName="230-02-MA1" Canvas.Left="479" Canvas.Top="367"/>
     <Blowers:VT_CMM_BlowerAirCompressor Canvas.Left="669" Canvas.Top="595" Height="60" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:JumpLabel 
-            JumpFromLabel="227-01-MA1" 
-            JumpToLabel="208-01-MA1" Canvas.Left="75" Canvas.Top="55" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+            JumpFromLabel="170-01-MA1" 
+            JumpToLabel="228-01-MA1" Canvas.Left="75" Canvas.Top="55" HorizontalAlignment="Center" VerticalAlignment="Center"/>
     <Labels:JumpLabel 
             JumpFromLabel="232-01-MA1" 
             JumpToLabel="292-01-MA1" Canvas.Left="75" Canvas.Top="436" HorizontalAlignment="Center" VerticalAlignment="Top"/>
@@ -128,7 +129,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="66" RenderTransformOrigin="0.5,0.5" StatusComponent="278-01-MA1" Height="20" Color="Air" Canvas.Left="942" Canvas.Top="672" HorizontalAlignment="Left" VerticalAlignment="Center" >
+    <Labels:Pipe Width="66" RenderTransformOrigin="0.5,0.5" StatusComponent="298-01-MA1" Height="20" Color="Air" Canvas.Left="942" Canvas.Top="672" HorizontalAlignment="Left" VerticalAlignment="Center" >
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -311,5 +312,8 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
+    <Labels:JumpLabel 
+      JumpFromLabel="230-01-MA1" 
+      JumpToLabel="291-01-MA1" Canvas.Left="75" Canvas.Top="331" HorizontalAlignment="Center" VerticalAlignment="Top"/>
   </Canvas>
 </UserControl>
